# datalens

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
datalens/: __init__.py
datalens/cleaners/: __init__.py  core.py
datalens/dashboard/: __init__.py  core.py
datalens/loaders/: __init__.py  core.py
datalens/visualizers/: __init__.py  core.py
examples/: quickstart.py  sales_data.csv
tests/: test_cleaners.py  test_loaders.py  test_visualizers.py
